--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
 
 }
 
+h1 {
+  color: red;
+  text-align: center;
+}
+
 canvas {
 
   position: absolute;
@@ -43,9 +48,9 @@ canvas {
 
 
  <BODY>
-  <canvas id="pinkboard"></canvas>
-
   <h1>Vì tôi là chàng khờ thuỷ chung!!!</h1>
+
+  <canvas id="pinkboard"></canvas>
 
   <script>
 
