--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
 }
 
 h1 {
+  margin: 0 auto;
   color: red;
   text-align: center;
+  vertical-align:middle;
 }
 
 canvas {
@@ -425,7 +427,7 @@ var ParticlePool = (function() {
 
     // create the fill
 
-    context.fillStyle = '#e63e8a';
+    context.fillStyle = '#3333ff';
 
     context.fill();
 
